<resources>
    <string name="app_name">MobileApp</string>
    <!--layout strings-->
    <string name="Pulsometr">Pulsometr</string>
    <string name="BT">Polacz z bluetooth</string>
    <string name="Stats">Statystyki</string>
    <string name="Exit">Wyjdz</string>
    <string name="Search">Wyszukaj urzadzenie</string>
    <string name="Pulse">Puls</string>
    <string name="Undo">Powrot</string>
    <string name="Connect">Polacz</string>
    <string name="Scan">Skanuj</string>
    <string name="SeeStats">Zobacz statystyki</string>
    <string name="MaxPulse">Maksymalny puls</string>
    <string name="MinPulse">Minimalny puls</string>
    <string name="AvgPulse">Sredni puls</string>
    <string name="Time">Czas [ms]</string>
    <string name="PulseBPM">Puls [BPM] </string>
    <string name="Delete">Usuń sesje </string>
</resources>