<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="80dp">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pulsometr"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="24dp"
        android:gravity="center" />

    <Button
        android:id="@+id/btBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BT"
        android:layout_weight="1"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/statBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Stats"
        android:layout_weight="1"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Exit"
        android:layout_weight="1"
        android:layout_marginBottom="8dp"/>


</LinearLayout>