<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/max"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/undoBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Undo"
        app:layout_constraintTop_toBottomOf="@id/avg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MaxPulse"
        app:layout_constraintTop_toBottomOf="@id/lineChart"
        app:layout_constraintEnd_toStartOf="@+id/maxNum"
        app:layout_constraintBottom_toTopOf="@+id/min"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/maxNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintBottom_toTopOf="@+id/minNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/max"
        app:layout_constraintTop_toBottomOf="@id/lineChart" />

    <TextView
        android:id="@+id/min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MinPulse"
        app:layout_constraintTop_toBottomOf="@id/max"
        app:layout_constraintEnd_toStartOf="@+id/minNum"
        app:layout_constraintBottom_toTopOf="@+id/avg"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/minNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@id/maxNum"
        app:layout_constraintStart_toEndOf="@id/min"
        app:layout_constraintBottom_toTopOf="@+id/avgNum"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/avg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AvgPulse"
        app:layout_constraintTop_toBottomOf="@id/min"
        app:layout_constraintEnd_toStartOf="@+id/avgNum"
        app:layout_constraintBottom_toTopOf="@+id/undoBtn"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/avgNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@id/minNum"
        app:layout_constraintStart_toEndOf="@id/avg"
        app:layout_constraintBottom_toTopOf="@+id/undoBtn"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Tytuł osi X -->
    <TextView
        android:id="@+id/xAxisTitle"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:text="@string/Time"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/lineChart"
        app:layout_constraintBottom_toTopOf="@id/max"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <!-- Tytuł osi Y -->
    <TextView
        android:id="@+id/yAxisTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PulseBPM"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>